[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_exporter"
version = "0.12.1"
authors = [
  { name="Desultory", email="dev@pyl.onl" },
]
description = "A Python library for exporting JSON data as metrics for Prometheus"
readme = "readme.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "prometheus_exporter >= 0.12.0",
    "aiohttp >= 3.9.1",
    "zenlib >= 1.6.5"
]

[project.scripts]
json_exporter = "json_exporter.main:main"
